--- a/style.css
+++ b/style.css
@@ -1,48 +1,177 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-color: #f4f4f4;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+body {
+  font-family: "Rubik", sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background-color: #f4f4f4;
+}
+
+/* ////////////////////////////////////////////// */
+/* General usable components */
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--center-v {
+  align-items: center;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
+/* ////////////////////////////////////////////// */
 
 header {
-    background: #333;
-    color: white;
-    padding: 20px;
+  background: #ffffff;
+  color: #1531a9;
+  padding: 5px;
+  border-bottom: #454545 1px solid;
+  font-size: 30px;
 }
 
-.about {
-    margin: 20px auto;
-    padding: 20px;
-    width: 80%;
-    background: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+div h1 {
+  font-size: 45px;
+}
+
+.hero {
+  background: #fff;
+  color: #454545;
+  padding: 20px;
+}
+
+span {
+  color: #1531a9;
+}
+
+img {
+  width: 60%;
+  /* height: 50%; */
 }
 
 .github {
-    margin: 20px;
+  margin: 20px;
 }
 
 .github-btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background: #24292e;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 18px;
+  display: inline-block;
+  padding: 10px 20px;
+  background: #1531a9;
+  color: #fff;
+  text-decoration: none;
+  border: 2px solid #454545;
+  border-radius: 6px;
+  font-size: 18px;
 }
 
 .github-btn:hover {
-    background: #444;
+  background-color: #ffffff;
+  color: #1531a9;
 }
 
+.motive {
+  margin: 20px auto;
+  padding: 20px;
+  width: 80%;
+  background: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* //////////////////////////////////////////////// */
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%; */
+
+  /* 60% of parent's width */
+  padding-bottom: 60%;
+
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
+  /* z-index: 10; */
+}
+/* //////////////////////////////////////////////// */
+
 .developer {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    background: #222;
-    color: white;
-    padding: 10px 0;
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  background: #1531a9;
+  color: #fff;
+  padding: 10px 0;
 }
